[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/chalenges_scene.gd" type="Script" id=1]
[ext_resource path="res://images/wb.background.png" type="Texture" id=2]
[ext_resource path="res://objects/background/stars.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/challenge_btn.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://images/red_2x-btnishe.png" type="Texture" id=6]
[ext_resource path="res://images/gift-3.png" type="Texture" id=7]
[ext_resource path="res://images/blue-2x-btnishe.png" type="Texture" id=8]
[ext_resource path="res://images/left-arrow-4.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]

size = 55
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "lock"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("gift-3:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:normal")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "unlock"
length = 1.2
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:normal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gift-3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 157.881, 64.7228 ), Vector2( 147.881, 64.7228 ), Vector2( 157.881, 64.7228 ), Vector2( 167.881, 64.7228 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("wb.background2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="chalenges" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="wbbackground" type="Sprite" parent="." index="0"]

position = Vector2( 350.043, 704.72 )
scale = Vector2( 1.22827, 1.2553 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="stars" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( -76.8988, 2.74646 )
scale = Vector2( 1.22827, 1.2553 )

[node name="challenge_btn1" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 69.3626, 383.289 )

[node name="challenge_btn4" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 69.3626, 524.289 )

[node name="challenge_btn7" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 69.3626, 665.289 )

[node name="challenge_btn10" parent="." index="5" instance=ExtResource( 4 )]

position = Vector2( 69.3626, 806.289 )

[node name="challenge_btn2" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( 235.058, 382.764 )

[node name="challenge_btn5" parent="." index="7" instance=ExtResource( 4 )]

position = Vector2( 235.058, 523.764 )

[node name="challenge_btn8" parent="." index="8" instance=ExtResource( 4 )]

position = Vector2( 235.058, 664.765 )

[node name="challenge_btn3" parent="." index="9" instance=ExtResource( 4 )]

position = Vector2( 400.052, 382.05 )

[node name="challenge_btn6" parent="." index="10" instance=ExtResource( 4 )]

position = Vector2( 400.052, 523.05 )

[node name="challenge_btn9" parent="." index="11" instance=ExtResource( 4 )]

position = Vector2( 400.052, 664.05 )

[node name="challenges" type="Label" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 74.0
margin_top = 91.0
margin_right = 554.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "CHALLENGES"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="lvl" type="Label" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 267.0
margin_right = 641.0
margin_bottom = 372.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "1 LEVEL"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="gift_button" type="TouchScreenButton" parent="." index="14"]

position = Vector2( 236.479, 807.778 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="gift-3" type="Sprite" parent="gift_button" index="0"]

position = Vector2( 157.881, 64.7228 )
scale = Vector2( 0.561443, 0.561443 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="gift_button" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/lock = SubResource( 2 )
anims/unlock = SubResource( 3 )
blend_times = [  ]

[node name="TouchScreenButton" type="TouchScreenButton" parent="." index="15"]

position = Vector2( 70.5527, 106.997 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="wb.background2" type="Sprite" parent="." index="16"]

position = Vector2( 303.963, 713.409 )
scale = Vector2( 1.13125, 1.26093 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="animation" type="AnimationPlayer" parent="." index="17"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show = SubResource( 4 )
blend_times = [  ]

[node name="start_ch_timer" type="Timer" parent="." index="18"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[connection signal="released" from="gift_button" to="." method="_on_gift_button_released"]

[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]

[connection signal="timeout" from="start_ch_timer" to="." method="_on_start_ch_timer_timeout"]


